[package]
name = "ecitygml-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI tool for CityGML operations"

[dependencies]
ecitygml = { version = "0.0.1-alpha.1", path = "../ecitygml", registry = "custom" }

clap = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
nalgebra = { workspace = true }
