[package]
name = "ecitygml-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI tool for processing CityGML data."

[dependencies]
ecitygml = { version = "0.0.1-alpha.8", path = "../ecitygml" }

thiserror = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
nalgebra = { workspace = true }
walkdir = { workspace = true }
