[package]
name = "ecitygml-io"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "IO operations for processing CityGML data."


[dependencies]
ecitygml-core = { version = "0.0.1-alpha.11", path = "../ecitygml-core" }

egml = { workspace = true }

thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
quick-xml = { workspace = true, features = ["serialize"] }
serde_yaml = { workspace = true }
nalgebra = { workspace = true }
# parry3d-f64 = { workspace = true, features = ["f64"] }
itertools = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
tracing = { workspace = true }
