[package]
name = "ecitygml-transform"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Supplementary operations for CityGML data."


[dependencies]
ecitygml-core = { version = "0.0.1-alpha.3", path = "../ecitygml-core" }

egml = { workspace = true }

thiserror = { workspace = true }
nalgebra = { workspace = true }
