[package]
name = "ecitygml-transform"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Supplementary operations for CityGML data."


[dependencies]
ecitygml-core = { version = "0.0.1-alpha.8", path = "../ecitygml-core" }

egml = { workspace = true }

thiserror = { workspace = true }
nalgebra = { workspace = true }
rayon = { workspace = true }
palette = { workspace = true }
colorous = { workspace = true }
