[package]
name = "ecitygml"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Library for processing CityGML data structures"


[dependencies]
ecitygml-core = { version = "0.0.1-alpha.1", path = "../ecitygml-core", registry = "custom" }
ecitygml-io = { version = "0.0.1-alpha.1", path = "../ecitygml-io", registry = "custom" }
ecitygml-transform = { version = "0.0.1-alpha.1", path = "../ecitygml-transform", registry = "custom" }
