[package]
name = "ecitygml"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Library for processing CityGML data."


[dependencies]
ecitygml-core = { version = "0.0.1-alpha.4", path = "../ecitygml-core" }
ecitygml-io = { version = "0.0.1-alpha.4", path = "../ecitygml-io" }
ecitygml-transform = { version = "0.0.1-alpha.4", path = "../ecitygml-transform" }
